# wasmin

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  build-docker.sh  build-exe-bun.sh  build-exe-deno.sh  build-exe-node.sh  build-exe.sh  bun.lockb  bunfig.toml  deno.json  package-lock.json  package.json  prepare-release.sh  sea-config.json  sea-prep.blob  turbo.json
.github/workflows/: bun-fs-js_publish.yml  deno-fs-js_publish.yml  eslint-config-custom-publish.yml  fs-js.yml  fs-js_publish.yml  github-fs-js_publish.yml  main.yml  nfs-js_publish.yml  node-fs-js_publish.yml  s3-fs-js_publish.yml  tsconfig_publish.yml  wasi-js_publish.yml  wasi-shell-js_publish.yml  wasi-snapshot-preview1-command-component_publish.yml  wasi-snapshot-preview2_publish.yml  wasm-promisify_publish.yml  wasm_loader_publish.yml
apps-experimental/function-azqueuestorage-nfs-js/: delete.sh  esbuild.mjs  (+3 more)
apps/wasi-reactor/: Cargo.toml  build.sh  run.sh  run_mod.sh  update-wasi-preview.sh
apps/wasi-reactor/component/: component_write.cjs  module0.wat  module3.wat  package.json  run.mjs  run_basic.mjs  run_mod.mjs  wasi_reactor.core.wat  wasi_reactor.core2.wat  wasi_reactor.d.ts  wasi_reactor.js  wasi_reactor_mod.js
apps/wasi-reactor/component/imports/: cli-base-environment.d.ts  cli-base-preopens.d.ts  cli-base-stderr.d.ts  cli-base-stdin.d.ts  cli-base-stdout.d.ts  exit.d.ts  filesystem-filesystem.d.ts  filesystem.d.ts  io-streams.d.ts  preopens.d.ts  random-random.d.ts  stdout.d.ts  streams.d.ts
apps/wasi-reactor/src/: lib.rs
apps/wasi-reactor/wit/: world.wit
(+291 files in other folders)
