[package]
name = "wasi-reactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
wit-bindgen = { version = "0.7.0", default_features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target = { path = "wit/world.wit" }

[package.metadata.component.dependencies]
